# sembada-cloud

./: .env.example  .gitignore  AGENTS.md  README.md  opencode.json  opencode.jsonc  pyproject.toml  requirements.txt  tui.jsonc
.github/workflows/: ci.yml  notebooks.yml
.opencode/agents/: CloudExpert.md  CodeReviewer.md  DataAnalyst.md  DataEngineer.md  EngineeringManager.md  SoftwareEngineer.md  SupportEngineer.md
.opencode/plans/: ci-migration-plan.md
app/src/: __init__.py  convert_to_parquet.py  download_azure_v2.py  features.py  models.py  qa_report.py  (+1 more)
docs/: 1_EDA_PLAN.md  AI_ENGINEERING_SPEC.md  AUTOMATED_QA_TECH_SPEC.md  AZURE vs Google Borg.md  AZURE_DATASET_FINDINGS.md  AZURE_PREDICTIVE_ANALYSIS_PLAN.md  AZURE_VM_SIZES_REFERENCE.md  CLOUD_WASTE_IDENTIFICATION.md  FINDINGS_BORG_DOWNLOAD_FEASIBILITY.md  GoogleCluster2019_DATASET_TABLES_ANALYSIS.md  Google_Botg_cluster_TECHNICAL_SPECIFICATION.md  IMPLEMENTATION_PROGRESS.md  RUNNING.md  Recommended_Models_From_Literature_Review.md  TECHNICAL_SPECIFICATION.md  TFT_FINDINGS.md
functions/: __init__.py  convert_to_parquet.py  download_azure_v2.py  download_borg.py  fetch_cluster_data.py
notebooks/: 00_download_azure_v2_dataset.ipynb  01_convert_to_parquet.ipynb  02_azure_descriptive_analysis.ipynb  02_azure_eda.ipynb  03_predictive_analysis.ipynb  03a_feature_engineering.ipynb  03b_tabular_models.ipynb  03c_timeseries_forecasting.ipynb  Google_ClusterData2019Traces.ipynb  Google_ClusterData2019Tracesxxx testing.ipynb  heart_disease.ipynb
tools/: final_setup.py  insert_quality_gates.py  setup_dotenv.py
(+14 files in other folders)
